tests/ui/send-future-endpoint-alias.stderr
error[E0499]: cannot borrow `*endpoint` as mutable more than once at a time
  --> tests/ui/send-future-endpoint-alias.rs:48:23
   |
46 |     let flow = endpoint.flow::<g::Msg<7, Payload>>().unwrap();
   |                -------- first mutable borrow occurs here
47 |     let send = flow.send(&Payload(1));
48 |     let _flow_again = endpoint.flow::<g::Msg<7, Payload>>().unwrap();
   |                       ^^^^^^^^ second mutable borrow occurs here
49 |     let _ = send;
   |             ---- first borrow later used here
   |
note: this call may capture more lifetimes than intended, because Rust 2024 has adjusted the `impl Trait` lifetime capture rules
  --> tests/ui/send-future-endpoint-alias.rs:47:16
   |
47 |     let send = flow.send(&Payload(1));
   |                ^^^^^^^^^^^^^^^^^^^^^^
help: if you can modify this crate, add a precise capturing bound to avoid overcapturing: `+ use<'r, 'a, A, ROLE, M, T, U, C, MAX_RV, Mint>`
  --> src/endpoint/flow.rs
   |
   |       ) -> impl core::future::Future<
   |  __________^
   | |         Output = SendResult<
   | |             ControlOutcome<
   | |                 'r,
...  |
   | |         >,
   | |     > + 'a
   | |__________^
